// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Bar Cozy 1`] = `
<div
  class="fd-bar fd-bar--cozy"
>
  
    
  <div
    class="fd-bar__left"
  >
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--transparent"
      >
        
                
        <i
          class="sap-icon--navigation-left-arrow"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--transparent"
      >
        
                
        <i
          class="sap-icon--home"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--transparent"
      >
        
                
        <i
          class="sap-icon--account"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-bar__middle"
  >
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <div
        aria-label="Group label"
        class="fd-segmented-button"
        role="group"
      >
        
                
        <button
          aria-label="button"
          aria-pressed="true"
          class="fd-button"
        >
          
                    
          <i
            class="sap-icon--email"
          />
          
                
        </button>
        
                
        <button
          aria-label="button"
          class="fd-button"
        >
          
                    
          <i
            class="sap-icon--iphone"
          />
          
                
        </button>
        
                
        <button
          aria-label="button"
          class="fd-button"
        >
          
                    
          <i
            class="sap-icon--notification-2"
          />
          
                
        </button>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-bar__right"
  >
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <span
        aria-label="Image label"
        class="fd-image--s"
        style="background-image: url('https://placeimg.com/400/400/nature');"
      >
        
            
      </span>
      
        
    </div>
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--transparent"
      >
        
                
        <i
          class="sap-icon--grid"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Bar Default 1`] = `
<div
  class="fd-bar"
>
  
    
  <div
    class="fd-bar__left"
  >
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--transparent"
      >
        
                
        <i
          class="sap-icon--navigation-left-arrow"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <span
        aria-label="text"
      >
        TEXT
      </span>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-bar__middle"
  >
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <div
        aria-label="Group label"
        class="fd-segmented-button"
        role="group"
      >
        
                
        <button
          aria-label="button"
          aria-pressed="true"
          class="fd-button fd-button--compact"
        >
          
                    
          <i
            class="sap-icon--email"
          />
          
                
        </button>
        
                
        <button
          aria-label="button"
          class="fd-button fd-button--compact"
        >
          
                    
          <i
            class="sap-icon--iphone"
          />
          
                
        </button>
        
                
        <button
          aria-label="button"
          class="fd-button fd-button--compact"
        >
          
                    
          <i
            class="sap-icon--notification-2"
          />
          
                
        </button>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <div
    class="fd-bar__right"
  >
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <span
        aria-label="Image label"
        class="fd-image--s"
        style="background-image: url('https://placeimg.com/400/400/nature');"
      >
        
            
      </span>
      
        
    </div>
    
        
    <div
      class="fd-bar__element"
    >
      
            
      <button
        aria-label="button"
        class="fd-button fd-button--transparent"
      >
        
                
        <i
          class="sap-icon--grid"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Bar Floating Footer 1`] = `
<section>
  

  <div
    style="margin-bottom: 2rem;"
  >
    <b>
      Default (desktop)
    </b>
  </div>
  

  <br />
  

  <div
    style="position: relative;"
  >
    
    
    <div
      class="fd-bar fd-bar--floating-footer"
    >
      
        
      <div
        class="fd-bar__right"
      >
        
            
        <div
          class="fd-bar__element"
        >
          
                
          <button
            aria-label="button"
            class="fd-button fd-button--emphasized fd-button--compact"
          >
            Save
          </button>
          
            
        </div>
        
            
        <div
          class="fd-bar__element"
        >
          
                
          <button
            aria-label="button"
            class="fd-button fd-button--transparent fd-button--compact"
          >
            Cancel
          </button>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  

  <div
    style="margin-bottom: 2rem;"
  >
    <b>
      Cozy (tablet and mobile)
    </b>
  </div>
  

  <br />
  

  <div
    style="position: relative;"
  >
    
    
    <div
      class="fd-bar fd-bar--floating-footer fd-bar--cozy"
    >
      
        
      <div
        class="fd-bar__right"
      >
        
            
        <div
          class="fd-bar__element"
        >
          
                
          <button
            aria-label="button"
            class="fd-button fd-button--emphasized"
          >
            Save
          </button>
          
            
        </div>
        
            
        <div
          class="fd-bar__element"
        >
          
                
          <button
            aria-label="button"
            class="fd-button fd-button--transparent"
          >
            Cancel
          </button>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Bar Footer 1`] = `
<section>
  

  <div>
    <b>
      Default (desktop)
    </b>
  </div>
  

  <br />
  

  <div
    class="fd-bar fd-bar--footer"
  >
    
    
    <div
      class="fd-bar__right"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--emphasized fd-button--compact"
        >
          Save
        </button>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent fd-button--compact"
        >
          Cancel
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  

  <div>
    <b>
      Cozy (tablet and mobile)
    </b>
  </div>
  

  <br />
  

  <div
    class="fd-bar fd-bar--footer fd-bar--cozy"
  >
    
    
    <div
      class="fd-bar__right"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--emphasized"
        >
          Save
        </button>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          Cancel
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Bar Header 1`] = `
<section>
  

  <div>
    <b>
      Default (desktop)
    </b>
  </div>
  

  <br />
  

  <div
    class="fd-bar fd-bar--header"
  >
    
    
    <div
      class="fd-bar__left"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--navigation-left-arrow"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--home"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--account"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-bar__middle"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <div
          aria-label="Group label"
          class="fd-segmented-button"
          role="group"
        >
          
                
          <button
            aria-label="button"
            aria-pressed="true"
            class="fd-button fd-button--compact"
          >
            
                    
            <i
              class="sap-icon--email"
            />
            
                
          </button>
          
                
          <button
            aria-label="button"
            class="fd-button fd-button--compact"
          >
            
                    
            <i
              class="sap-icon--iphone"
            />
            
                
          </button>
          
                
          <button
            aria-label="button"
            class="fd-button fd-button--compact"
          >
            
                    
            <i
              class="sap-icon--notification-2"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-bar__right"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <span
          aria-label="Image label"
          class="fd-image--s"
          style="background-image: url('https://placeimg.com/400/400/nature');"
        >
          
            
        </span>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--grid"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  

  <div>
    <b>
      Cozy (tablet and mobile)
    </b>
  </div>
  

  <br />
  

  <div
    class="fd-bar fd-bar--header fd-bar--cozy"
  >
    
    
    <div
      class="fd-bar__left"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--navigation-left-arrow"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--home"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--account"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-bar__middle"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <div
          aria-label="Group label"
          class="fd-segmented-button"
          role="group"
        >
          
                
          <button
            aria-label="button"
            aria-pressed="true"
            class="fd-button"
          >
            
                    
            <i
              class="sap-icon--email"
            />
            
                
          </button>
          
                
          <button
            aria-label="button"
            class="fd-button"
          >
            
                    
            <i
              class="sap-icon--iphone"
            />
            
                
          </button>
          
                
          <button
            aria-label="button"
            class="fd-button"
          >
            
                    
            <i
              class="sap-icon--notification-2"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-bar__right"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <span
          aria-label="Image label"
          class="fd-image--s"
          style="background-image: url('https://placeimg.com/400/400/nature');"
        >
          
            
        </span>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--grid"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Bar Header With Subheader 1`] = `
<section>
  

  <div>
    <b>
      Default (desktop)
    </b>
  </div>
  

  <br />
  

  <div
    class="fd-bar fd-bar--header-with-subheader"
  >
    
    
    <div
      class="fd-bar__left"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--navigation-left-arrow"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--home"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--account"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-bar__middle"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <div
          aria-label="Group label"
          class="fd-segmented-button"
          role="group"
        >
          
                
          <button
            aria-label="button"
            aria-pressed="true"
            class="fd-button fd-button--compact"
          >
            
                    
            <i
              class="sap-icon--email"
            />
            
                
          </button>
          
                
          <button
            aria-label="button"
            class="fd-button fd-button--compact"
          >
            
                    
            <i
              class="sap-icon--iphone"
            />
            
                
          </button>
          
                
          <button
            aria-label="button"
            class="fd-button fd-button--compact"
          >
            
                    
            <i
              class="sap-icon--notification-2"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-bar__right"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <span
          aria-label="Image label"
          class="fd-image--s"
          style="background-image: url('https://placeimg.com/400/400/nature');"
        >
          
            
        </span>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--grid"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <div
    class="fd-bar fd-bar--subheader"
  >
    
    
    <div
      class="fd-bar__middle"
    >
      
        
      <div
        class="fd-bar__element fd-bar__element--full-width"
      >
        
            
        <input
          aria-label="input"
          class="fd-input fd-input--compact fd-input-group__input"
          id=""
          name=""
          type="text"
          value="1234568910 "
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Bar Subheader 1`] = `
<section>
  

  <div>
    <b>
      Default (desktop)
    </b>
  </div>
  

  <br />
  

  <div
    class="fd-bar fd-bar--subheader"
  >
    
    
    <div
      class="fd-bar__left"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent fd-button--compact"
        >
          
                
          <i
            class="sap-icon--navigation-left-arrow"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--transparent fd-button--compact"
        >
          
                
          <i
            class="sap-icon--home"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-bar__right"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <span
          aria-label="Image label"
          class="fd-image--s"
          style="background-image: url('https://placeimg.com/400/400/nature');"
        >
          
            
        </span>
        
        
      </div>
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <button
          aria-label="button"
          class="fd-button fd-button--compact fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--grid"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  

  <div>
    <b>
      Cozy (tablet and mobile)
    </b>
  </div>
  

  <br />
  

  <div
    class="fd-bar fd-bar--subheader fd-bar--cozy"
  >
    
    
    <div
      class="fd-bar__middle"
    >
      
        
      <div
        class="fd-bar__element"
      >
        
            
        <div
          class="fd-form-item"
        >
          
                
          <div
            aria-label="Group label"
            class="fd-segmented-button"
            role="group"
          >
            
                    
            <button
              aria-label="button"
              aria-pressed="true"
              class="fd-button fd-button--compact"
            >
              
                        
              <i
                class="sap-icon--email"
              />
              
                    
            </button>
            
                    
            <button
              aria-label="button"
              class="fd-button fd-button--compact"
            >
              
                        
              <i
                class="sap-icon--iphone"
              />
              
                    
            </button>
            
                    
            <button
              aria-label="button"
              class="fd-button fd-button--compact"
            >
              
                        
              <i
                class="sap-icon--notification-2"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

  <br />
  <br />
  

  <div>
    <b>
      Full width element
    </b>
  </div>
  

  <br />
  

  <div
    class="fd-bar fd-bar--subheader fd-bar--cozy"
  >
    
    
    <div
      class="fd-bar__middle"
    >
      
        
      <div
        class="fd-bar__element fd-bar__element--full-width"
      >
        
            
        <input
          aria-label="input"
          class="fd-input fd-input--compact fd-input-group__input"
          id=""
          name=""
          type="text"
          value="1234568910"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
  

</section>
`;
